# sdx-transformer

./: .editorconfig  .flake8  .gitattributes  .gitignore  .version  Dockerfile  Makefile  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt  run.py  temp.json  test-requirements.txt
.github/workflows/: deploy-docs.yaml  test-docs.yaml  version-number.yml
Docs/: writerside.cfg
Writerside/: s.tree  writerside.cfg
Writerside/cfg/: buildprofiles.xml
Writerside/topics/: Buildspec.topic  Overview.topic  The-Buildspec.md  starter-topic.md
api/: openapi.yaml
app/: __init__.py  build_spec.py  config.py  definitions.py  execute.py  fapi_routes.py  functions.py  in_memory_zip.py  interpolate.py  looping.py  manager.py  pck.py  populate.py  prepop.py  routes.py  tree_walker.py
app/berd/: berd_transformer.py  collect_items.py  convert_data.py
app/build_specs/: build_spec.py  definitions.py  formatter_selectors.py  mappers.py  mappings.py  reader.py  spec_selectors.py  survey_mapping.py
app/config/: dependencies.py  formatters.py  functions.py  specs.py
app/controllers/: flat.py  looped.py  prepop.py
app/definitions/: data.py  executor.py  formatter.py  input.py  mapper.py  output.py  repository.py  spec.py  spec_reader.py  spec_repo.py  transformer.py
app/formatters/: cora_formatter.py  cora_looping_formatter.py  cs_formatter.py  cs_looping_formatter.py  formatter.py  idbr_formatter.py  idbr_looping_formatter.py  image_looping_formatter.py  json_formatter.py  looping_formatter.py  open_road_formatter.py  spp_formatter.py  spp_looping_formatter.py
build_specs/: abs.yaml  acas.json  ashe-prepop.yaml  ashe.yaml  berd.yaml  blocks.yaml  bricks.json  construction-spp.yaml  construction.yaml  credit_grantors.json  des.json  epi-prepop.yaml  epi.yaml  fuels.yaml  ipi-prepop.yaml  ipi.yaml  looping-spp.yaml  mbs-spp.yaml  mcg.yaml  mes.yaml  mwss.json  mwss.yaml  ppi.yaml  prices-prepop.yaml  qbs-spp.yaml  qbs.yaml  qpses.yaml  qpsespb.yaml  qpsesrap.yaml  rsi-spp.yaml  sppi-prepop.yaml  sppi.yaml  stocks.yaml  ukis.json  ukis.yaml
docs/: transformer.tree
scripts/: baby_jac.py  content.txt
tests/: helpers.py
(+605 files in other folders)
