[project]
name = "sdx-transformer"
version = "2.0.15"
description = "Transforming for SDX"
requires-python = ">=3.13"
dependencies = [
    "sdx-base==0.1.5",
    "pyyaml>=6.0.0",
]

[tool.uv.sources]
sdx-base = { index = "sdx-repo" }

[[tool.uv.index]]
name = "sdx-repo"
url = "https://europe-west2-python.pkg.dev/ons-sdx-ci/sdx-python-packages/simple/"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-xdist>=3.6.1",
    "mypy>=1.15.0",
    "jsonschema>=4.23.0",
]

version-check = [
 "toml>=0.10.2",
 "tomlkit>=0.13.3",
]

lint = [
    "ruff>=0.14.9",
]

[tool.ruff]
line-length = 121
exclude = [ "lib", "__pycache__", ".venv",]

[tool.ruff.lint]
extend-select = [ "E303", "W391", "W292", "E302"]
preview = true